Bug 227646 Tabbing to move focus doesn't work at end of top chrome doc r/sr=bryner a=chofmann